Fixed navbar alignment, changed user profile

--- a/app/public/style/style.less
+++ b/app/public/style/style.less
@@ -13,7 +13,7 @@ html {padding-top: 70px;}
   }
 
   .buttons {
-    i { font-size: 20px; }
+    //i { font-size: 20px; }
     .cart a { padding-right: 0; }
   }
 
